tests/baselines/reference/contextualSignatureInstantiation.errors.txt
tests/cases/conformance/types/typeRelationships/typeInference/contextualSignatureInstantiation.ts(19,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'string | number', but here has type 'T'.
tests/cases/conformance/types/typeRelationships/typeInference/contextualSignatureInstantiation.ts(20,9): error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
  Type argument candidate '1' is not a valid type argument because it is not a supertype of candidate 'T'.
tests/cases/conformance/types/typeRelationships/typeInference/contextualSignatureInstantiation.ts(21,9): error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
  Type argument candidate '"one"' is not a valid type argument because it is not a supertype of candidate 'T'.
tests/cases/conformance/types/typeRelationships/typeInference/contextualSignatureInstantiation.ts(25,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number[] | string[]', but here has type 'T[] | U[]'.
tests/cases/conformance/types/typeRelationships/typeInference/contextualSignatureInstantiation.ts(26,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number[] | string[]', but here has type 'T[] | U[]'.
tests/cases/conformance/types/typeRelationships/typeInference/contextualSignatureInstantiation.ts(27,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number[] | string[]', but here has type 'T[] | U[]'.


==== tests/cases/conformance/types/typeRelationships/typeInference/contextualSignatureInstantiation.ts (6 errors) ====
    // TypeScript Spec, section 4.12.2:
    // If e is an expression of a function type that contains exactly one generic call signature and no other members,
    // and T is a function type with exactly one non - generic call signature and no other members, then any inferences
    // made for type parameters referenced by the parameters of T's call signature are fixed, and e's type is changed
    // to a function type with e's call signature instantiated in the context of T's call signature (section 3.8.5).
    
    declare function foo<T>(cb: (x: number, y: string) => T): T;
    declare function bar<T, U, V>(x: T, y: U, cb: (x: T, y: U) => V): V;
    declare function baz<T, U>(x: T, y: T, cb: (x: T, y: T) => U): U;
    
    declare function g<T>(x: T, y: T): T;
    declare function h<T, U>(x: T, y: U): T[] | U[];
    
    var a: number;
    var a = bar(1, 1, g);      // Should be number
    var a = baz(1, 1, g);      // Should be number
    
    var b: number | string;
    var b = foo(g);            // Should be number | string
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'string | number', but here has type 'T'.
    var b = bar(1, "one", g);  // Should be number | string
            ~~~
!!! error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
!!! error TS2453:   Type argument candidate '1' is not a valid type argument because it is not a supertype of candidate 'T'.
    var b = bar("one", 1, g);  // Should be number | string
            ~~~
!!! error TS2453: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly.
!!! error TS2453:   Type argument candidate '"one"' is not a valid type argument because it is not a supertype of candidate 'T'.
    var b = baz(b, b, g);      // Should be number | string
    
    var d: number[] | string[];
    var d = foo(h);            // Should be number[] | string[]
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number[] | string[]', but here has type 'T[] | U[]'.
    var d = bar(1, "one", h);  // Should be number[] | string[]
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number[] | string[]', but here has type 'T[] | U[]'.
    var d = bar("one", 1, h);  // Should be number[] | string[]
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'd' must be of type 'number[] | string[]', but here has type 'T[] | U[]'.
    var d = baz(d, d, g);      // Should be number[] | string[]
    